--- a/new.html
+++ b/new.html
@@ -7,6 +7,7 @@
     <title>My Third Github Repo</title>
 </head>
 <body>
+    <h2>GITHUB</h2>
     <p>Hello!
         This is my third Github repo
     </p>
